fixing the overflow

--- a/css/stylesheritage2.css
+++ b/css/stylesheritage2.css
@@ -149,6 +149,7 @@ body {
   text-align: justify;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 15px;
+  overflow: hidden;
 }
 
 #mountdesc02 {
@@ -157,6 +158,7 @@ body {
   text-align: justify;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 15px;
+  overflow: hidden;
 }
 
 #mountdesc03 {
@@ -165,6 +167,7 @@ body {
   text-align: justify;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 15px;
+  overflow: hidden;
 }
 
 #description {
@@ -173,6 +176,7 @@ body {
   text-align: justify;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 15px;
+  overflow: hidden;
 }
 
 #desccolor {
